# annotated-corpus

./: README.MD  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
data/: hyperskill-dataset-97961053.txt  hyperskill-dataset-97997779.txt
src/annotated_corpus.egg-info/: PKG-INFO  SOURCES.txt
src/corpus/: get_stats.py  read_corpus.py
test/: test.txt  test_get_stats.py  test_read_corpus.py  test_with_specials.txt
topics/: Decision_tree_iris.py  NER.py  RF_iris.py  consecutive_rows_dataframe.py  gini_binary.py  ner_stanza.py  nltk_ner.py  normalize.py  spacy_lemma.py  standardize.py  variance.py  wordnet.py
