[metadata]
name = annotated-corpus
version = 3.12.3
packages = []
url =
license =
author = jwisskirchen
author_email =
description = Jetbrains academy Python for science track project.

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where = src